# muen

./: .replit  pyproject.toml
attached_assets/: Pasted--04-14-18-21-51-232-trendyol-api-client-INFO-Finding-brand-for-product-LCW-Kids--1744655010214.txt  Pasted--04-14-20-22-29-679-sentence-transformers-SentenceTransformer-INFO-Load-pretrained-SentenceTra-1744662177987.txt  Pasted--DEBUG-API-Olu-turulan-URL-https-api-trendyol-com-sapigw-product-product-categories-522-attrib-1744640892963.txt  Pasted--DEBUG-CREATE-r-n-olu-turma-ba-lat-l-yor-ID-29-Ba-l-k-LCW-baby--1744456443529.txt  Pasted--FILE-README-md--1744392556528.txt  Pasted--project-name-repl-nix-workspace-version-0-1-0-description-Add-your-description-here-re-1744449990836.txt  Pasted--r-n-Aktar-m-v2-r-nleriniz-Trendyol-sistemine-y-klenirken-bu-metod-kullan-lmaktad-r-Tekli-ve-ok-1744395776650.txt  Pasted--r-n-Bilgisi-G-ncelleme-updateProduct-r-n-Bilgisi-G-ncelleme-Bu-method-ile-Trendyol-ma-azan-zda-1744405585254.txt  Pasted--tasks-py-import-logging-import-requests-import-json-import-re-from-datetime-import-datetime--1744392409315.txt  Pasted--www-lcw-com-tr-TR-TR-ajax-Model-GetStoreInventoryMultiple-2025-04-14-20-14-17-289-lcwaikiki-pr-1744661707409.txt  Pasted-2025-04-11-23-08-08-164-trendyol-api-client-ERROR-Request-URL-https-apigw-trendyol-com-inte-1744413023538.txt  Pasted-2025-04-11-23-16-57-181-trendyol-api-client-ERROR-400-BAD-REQUEST-ERROR-2025-04-11-23-16-57-1-1744413473484.txt  Pasted-25-04-11-21-45-55-051-trendyol-api-client-INFO-Using-existing-brand-ID-102-2025-04-11-21-45--1744408316990.txt  (+18 more)
(+246 files in other folders)
