[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-unfold>=0.54.0",
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "django-apscheduler>=0.7.0",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "loguru>=0.7.3",
    "tqdm>=4.67.1",
    "trafilatura>=2.0.0",
]
